# sardine

./: .gitignore  LICENSE  NOTICE  README.md  example.py  pyproject.toml
sardine/: __init__.py  consts.py  simulator.py  version.py
sardine/buffer/: __init__.py  base_vec_env.py  buffers.py  type_aliases.py  utils.py  vec_normalize.py
sardine/embeddings/: item_embeddings_diffuse.npy  item_embeddings_focused.npy  item_embeddings_focused_small.npy  item_embeddings_rerank.npy  movielens.npy
sardine/embeddings/mf_embeddings/: SlateTopK-Bored-v0_epsilon0.5_seed2023.npy
sardine/policies/: __init__.py  base.py  epsilon_oracles.py
sardine/wrappers/: __init__.py  ideal_state.py  topk.py  topk_ideal.py
